perfect hystrix 参数配置